@@ -490,7 +490,7 @@ exact-inputs-match=Exact inputs match
 exact-inputs-match-tooltip=Only show trades with the exact same inputs as set in the filter.
 exact-outputs-match=Exact outputs match
 exact-outputs-match-tooltip=Only show trades with the exact same outputs as set in the filter.
-click-to-ping=Click to ping in chat.
+ping-in-chat=Ping in chat.
 quest-reward=(Quest Reward)
 quest-reward-free-hexes-remaining=Free hex claims remaining: [font=__3__][color=__2__]__1__[.color][.font]
 sort-method=Sort method
@@ -643,7 +643,6 @@ dungeon-location=Dungeons are located far from spawn.
 dungeon-loot-condition=Pick up all chests in a dungeon to loot it.
 first-spidertron=Work from home!
 no-robot-slots=Hexports have no slots for robots.
-click-trade-arrow-to-ping=Click a trade arrow to ping the trade in chat.
 
 [quest-title]
 ground-zero=[img=virtual-signal.shape-circle] Ground Zero
@@ -710,7 +709,7 @@ dungeon-mastery=[img=virtual-signal.signal-white-flag] Dungeon Mastery
 
 [quest-description]
 ground-zero=Claim your first two hexes. Let's start this journey!
-check-this-out=Mouse over the arrow of a trade to see some important details like [font=heading-2][color=purple]trade productivity[.color][.font].
+check-this-out=Trades in hex cores have useful buttons underneath them.
 biter-rammer=Ram a car into a spawner. It might be fun!
 find-some-trades=Claim more [img=entity.hex-core] hex cores to find more trades! Did you get lucky?
 exploration=Claim more hexes. Take what is rightfully yours!
@@ -797,6 +796,7 @@ loot-dungeons-off-planet=Loot Dungeons Off Planet
 hex-cores-in-mode=Hex Cores in Mode
 visit-planet=Visit Planet
 ping-trade=Ping Trade
+create-trade-map-tag=Create Map Tag
 
 [quest-condition-description]
 claimed-hexes=Claim a total of [font=__3__][color=__2__]__1__[.color][.font] hexes.
@@ -824,6 +824,7 @@ loot-dungeons-off-planet=Loot [font=__3__][color=__2__]__1__[.color][.font] __pl
 hex-cores-in-mode=Switch [font=__4__][color=__3__]__1__[.color][.font] __plural_for_parameter__1__{1=hex core|rest=hex cores}__ to [font=__4__][color=__3__]__2__[.color][.font] mode.
 visit-planet=Visit [planet=__1__].
 ping-trade=Ping a trade in chat.
+create-trade-map-tag=Create a trade's map tag.
 
 [quest-reward-name]
 unlock-feature=Unlock Feature
